# pipewine

./: .coveragerc  .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: python-package.yml  python-publish.yml
autoapi/pipewine/: index.html
autoapi/summary/: index.html
docs/: index.md
docs/css/: extra.css
docs/tutorial/: actions.md  cache.md  cli.md  core.md  data.md  installation.md  operations.md  operators.md  overview.md  sinks.md  sources.md  workflows.md
examples/: compose.py  custom_mapper.py  mapper.py  read.py
examples/cache/: cache_benchmark.py  cache_example.py  checkpoints_use_case.py  dataset_cache_use_case.py  item_cache.py  item_cache_use_case.py
examples/custom_formats/: images_folder.py
examples/custom_mappers/: invert_colors.py
examples/custom_operators/: normalize.py
examples/grabber/: grab.py
examples/underfolder/: read_basic.py  read_typed.py  write.py
examples/workflows/: run_and_draw.py
pipewine/: __init__.py  _op_typing.py  _register.py  bundle.py  dataset.py  grabber.py  item.py  reader.py  sample.py
pipewine/cli/: __init__.py  extension.py  main.py  mappers.py  ops.py  sinks.py  sources.py  utils.py  workflows.py
pipewine/mappers/: __init__.py  compose.py  crypto.py  item_transform.py  key_transform.py
pipewine/operators/: __init__.py  base.py  cache.py  functional.py  merge.py  split.py
pipewine/parsers/: __init__.py  base.py  image_parser.py  json_parser.py  metadata_parser.py  numpy_parser.py  pickle_parser.py  yaml_parser.py
pipewine/sinks/: base.py  fs_utils.py  underfolder.py
pipewine/sources/: base.py  underfolder.py
pipewine/workflows/: __init__.py  drawing.py  events.py  execution.py  model.py  tracking.py
search/: search_index.json
tests/: conftest.py
tests/examples/: compose.py  read.py
tests/integration/: test_cli.py  test_workflows.py
tests/unit/: test_bundle.py  test_dataset.py  test_grabber.py  test_init.py  test_item.py  test_op_typing.py  test_reader.py  test_register.py  test_sample.py  test_storage.py
tutorial/actions/: index.html
tutorial/cache/: index.html
tutorial/cli/: index.html
tutorial/core/: index.html
tutorial/data/: index.html
tutorial/installation/: index.html
tutorial/operations/: index.html
tutorial/operators/: index.html
tutorial/overview/: index.html
tutorial/sinks/: index.html
tutorial/sources/: index.html
tutorial/workflows/: index.html
typelime/: __init__.py  _op_typing.py  _register.py  _setuppable.py  bundle.py  dataset.py  grabber.py  item.py  parser.py  sample.py  storage.py  tracking.py
typelime/cli/: __init__.py  main.py  mappers.py  ops.py  sinks.py  sources.py
typelime/generators/: base.py
typelime/mappers/: __init__.py  base.py  cache.py  compose.py  crypto.py  key_transform.py
(+151 files in other folders)
